interesting times we live in
